--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</script>
 </head>
 <body>
+	<div id="b1">
 	<div id="MyDiv1">
 WWWWWWeee
 </div>
@@ -16,6 +17,7 @@ WWWWWWeee
 <div id="MyDiv3">
 
 </div>
+		</div>
 
 </body>
 
